feat: Integrate KaTeX for LaTeX rendering
Integrates KaTeX to render mathematical formulas and equations within the application, enhancing the display of technical content.

This change involves:
- Adding KaTeX CSS and JavaScript libraries to `index.html`.
- Updating `FlashcardsModal.tsx` to use KaTeX for rendering math expressions on flashcards.
- Refining prompt instructions in `geminiService.ts` to ensure correct LaTeX formatting by the AI model, including specific delimiters and valid command usage.
- Adjusting `App.tsx` to handle potential data persistence errors and ensure a valid active project is always selected.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- KaTeX CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0KOVEMVIgtOKVosMFsGUjorn2GZWhdHwk1Ime0GTRKzFJEo5oDEcn" crossorigin="anonymous">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -77,6 +79,9 @@
 </head>
   <body class="font-sans">
     <div id="root"></div>
+    <!-- KaTeX JS and auto-render extension -->
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js" integrity="sha384-XjKyOOlGwcjNTAIQHIpgOno0Hl1YQqzUOEleOLALmuqehneUG+vnGctmUb0ZY0i8" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous"></script>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
