--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       }
     </script>
     <style>
-      .light-theme {
+      body {
         background-color: #FAFAFA;
         background-image: radial-gradient(hsl(0 0% 0% / 0.1) 1px, transparent 1px);
         background-size: 24px 24px;
         color: #212121;
       }
-      .dark-theme {
+      html.dark body {
         background-color: #0f172a;
         background-image: radial-gradient(hsl(0 0% 100% / 0.1) 1px, transparent 1px);
         background-size: 24px 24px;
