feat: Enhance UI theme and color palette
Updates the application's visual theme to use a lighter, more vibrant color scheme. This includes changing the main background to a soft yellow and refining component background colors for a cleaner look. Also, adjusts task status colors to be more distinct.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </script>
     <style>
       body {
-        background-color: #FAFAFA;
-        background-image: radial-gradient(hsl(0 0% 0% / 0.1) 1px, transparent 1px);
+        background-color: #FFFDE7; /* Light yellow background */
+        background-image: radial-gradient(hsl(0 0% 0% / 0.05) 1px, transparent 1px);
         background-size: 24px 24px;
         color: #212121;
       }
